manifests/workloads/resume-dot-danmanners-dot-com/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: resume-dot-danmanners-dot-com
  name: resume-dot-danmanners-dot-com
