manifests/workloads/resume-dot-danmanners-dot-com/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: resume-danmanners-com
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`resume.danmanners.com`)
      kind: Rule
      services:
        - name: resume
          port: 80
  tls:
    secretName: resume-danmanners-com
